[gd_scene load_steps=58 format=2]

[ext_resource path="res://Assets/Puzzle 3/15.PNG" type="Texture" id=1]
[ext_resource path="res://Assets/Puzzle 3/16.PNG" type="Texture" id=2]
[ext_resource path="res://Assets/Puzzle 3/17.PNG" type="Texture" id=3]
[ext_resource path="res://Assets/Puzzle 3/12.PNG" type="Texture" id=4]
[ext_resource path="res://Assets/Puzzle 3/4.PNG" type="Texture" id=5]
[ext_resource path="res://Assets/Puzzle 3/11.PNG" type="Texture" id=6]
[ext_resource path="res://Assets/Puzzle 3/arrow_left_click.png" type="Texture" id=7]
[ext_resource path="res://Assets/Puzzle 3/8.PNG" type="Texture" id=8]
[ext_resource path="res://Assets/Puzzle 3/3.PNG" type="Texture" id=9]
[ext_resource path="res://Assets/Puzzle 3/1.PNG" type="Texture" id=10]
[ext_resource path="res://Assets/Puzzle 3/2.PNG" type="Texture" id=11]
[ext_resource path="res://Assets/Puzzle 3/5.PNG" type="Texture" id=12]
[ext_resource path="res://Assets/Puzzle 3/6.PNG" type="Texture" id=13]
[ext_resource path="res://Assets/Puzzle 3/7.PNG" type="Texture" id=14]
[ext_resource path="res://Scenes/Puzzle3/lineCIrcle.png" type="Texture" id=15]
[ext_resource path="res://Assets/Puzzle 3/9.PNG" type="Texture" id=16]
[ext_resource path="res://Assets/Puzzle 3/10.PNG" type="Texture" id=17]
[ext_resource path="res://Assets/Puzzle 3/13.PNG" type="Texture" id=18]
[ext_resource path="res://Assets/Puzzle 3/14.PNG" type="Texture" id=19]
[ext_resource path="res://Assets/keyboard typing.wav" type="AudioStream" id=20]
[ext_resource path="res://Assets/Puzzle 3/summary_btn_click.png" type="Texture" id=21]
[ext_resource path="res://Assets/Puzzle 3/summary_btn.png" type="Texture" id=22]
[ext_resource path="res://Assets/Puzzle 3/x_click.png" type="Texture" id=23]
[ext_resource path="res://Assets/Puzzle 3/success.wav" type="AudioStream" id=24]
[ext_resource path="res://Assets/Puzzle 3/arrow_left.png" type="Texture" id=25]
[ext_resource path="res://Assets/Puzzle 3/6ca1cb.png" type="Texture" id=26]
[ext_resource path="res://Assets/Puzzle 3/arrow_right.png" type="Texture" id=27]
[ext_resource path="res://Assets/Puzzle 3/0e141c.png" type="Texture" id=28]
[ext_resource path="res://Assets/Puzzle 3/x.png" type="Texture" id=29]
[ext_resource path="res://Scenes/Puzzle3/PutTogetherPuzzleArea.gd" type="Script" id=30]
[ext_resource path="res://VT323-Regular.ttf" type="DynamicFontData" id=31]
[ext_resource path="res://Assets/Puzzle 3/Transporting_my_vaccine.png" type="Texture" id=32]
[ext_resource path="res://Assets/left_arrow_click.png" type="Texture" id=33]
[ext_resource path="res://Assets/Puzzle 3/right_arrow_click.png" type="Texture" id=34]
[ext_resource path="res://Scenes/Puzzle3/p1.tscn" type="PackedScene" id=35]
[ext_resource path="res://Scenes/Puzzle3/DropZoneD.tscn" type="PackedScene" id=36]
[ext_resource path="res://Scenes/Puzzle3/Fireworks.tscn" type="PackedScene" id=37]
[ext_resource path="res://Assets/Puzzle 3/continue_btn.png" type="Texture" id=38]
[ext_resource path="res://Assets/Puzzle 3/continue_btn_click.png" type="Texture" id=39]
[ext_resource path="res://Assets/click.wav" type="AudioStream" id=40]
[ext_resource path="res://Assets/Puzzle 3/RNA_Strand.png" type="Texture" id=41]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 2

[sub_resource type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.054902, 0.0784314, 0.109804, 1 )

[sub_resource type="DynamicFont" id=4]
size = 28
font_data = ExtResource( 31 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.423529, 0.631373, 0.796078, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=6]
size = 30
extra_spacing_char = 1
extra_spacing_space = 1
font_data = ExtResource( 31 )

[sub_resource type="DynamicFont" id=7]
size = 25
extra_spacing_char = 1
extra_spacing_space = 1
font_data = ExtResource( 31 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.423529, 0.631373, 0.796078, 1 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="DynamicFont" id=9]
size = 28
font_data = ExtResource( 31 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0196078, 0.00392157, 0.00392157, 1 )

[sub_resource type="DynamicFont" id=12]
size = 28
font_data = ExtResource( 31 )

[sub_resource type="DynamicFont" id=13]
size = 25
font_data = ExtResource( 31 )

[sub_resource type="Animation" id=14]
tracks/0/type = "value"
tracks/0/path = NodePath("FadeOutLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeOutLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=15]
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("FadeOutLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FadeOutLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=16]
length = 4.0
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Instructions:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.001 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "clearDialog"
}, {
"args": [  ],
"method": "sayDialog"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "startKeyboardTyping"
}, {
"args": [  ],
"method": "stopKeyboardTyping"
} ]
}

[node name="Puzzle3" type="Node2D"]
material = SubResource( 1 )
position = Vector2( 485.869, 57.3123 )
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 30 )

[node name="6ca1cb" type="Sprite" parent="."]
position = Vector2( -48.5397, 297.636 )
rotation = 4.70389e-15
scale = Vector2( 3.77635, 3.78645 )
texture = ExtResource( 26 )

[node name="0e141c" type="Sprite" parent="."]
position = Vector2( 31.4345, 306.662 )
scale = Vector2( 3.94779, 2.82759 )
texture = ExtResource( 28 )

[node name="lineCIrcle" type="Sprite" parent="."]
position = Vector2( 310.4, 297.744 )
scale = Vector2( 1.01134, 1.02143 )
texture = ExtResource( 15 )

[node name="p1" parent="." instance=ExtResource( 35 )]
position = Vector2( -90.6042, 323.589 )

[node name="1" type="Sprite" parent="p1"]
position = Vector2( 0.62793, 0.12207 )
scale = Vector2( 0.143063, 0.144758 )
texture = ExtResource( 10 )
flip_h = true
flip_v = true

[node name="p1Drop" parent="." instance=ExtResource( 36 )]
position = Vector2( 292.421, 401.352 )
dropZoneID = 1

[node name="p2" parent="." instance=ExtResource( 35 )]
position = Vector2( -72.006, 168.667 )
scale = Vector2( 0.4, 0.4 )
pieceId = 2

[node name="p2" type="Sprite" parent="p2"]
position = Vector2( -0.174103, -0.799561 )
scale = Vector2( 0.175114, 0.185583 )
texture = ExtResource( 11 )
flip_h = true
flip_v = true

[node name="p2Drop" parent="." instance=ExtResource( 36 )]
position = Vector2( 414.574, 195.842 )
dropZoneID = 2

[node name="p3" parent="." instance=ExtResource( 35 )]
position = Vector2( 323.352, 589.002 )
scale = Vector2( 0.4, 0.8 )
pieceId = 3

[node name="p3" type="Sprite" parent="p3"]
position = Vector2( -1.11987, -0.38443 )
scale = Vector2( 0.200783, 0.104251 )
texture = ExtResource( 9 )
flip_h = true
flip_v = true

[node name="p3Drop" parent="." instance=ExtResource( 36 )]
position = Vector2( 344.239, 178.199 )
dropZoneID = 3

[node name="p4" parent="." instance=ExtResource( 35 )]
position = Vector2( 597.942, 105.358 )
scale = Vector2( 0.3, 0.4 )
pieceId = 4

[node name="4" type="Sprite" parent="p4"]
position = Vector2( -1.1141, -8.38623 )
scale = Vector2( 0.138781, 0.106127 )
texture = ExtResource( 5 )
flip_h = true
flip_v = true

[node name="p4Drop" parent="." instance=ExtResource( 36 )]
position = Vector2( 390.233, 150.906 )

[node name="p5" parent="." instance=ExtResource( 35 )]
position = Vector2( 180.173, 591.353 )
scale = Vector2( 0.45, 0.8 )
pieceId = 5

[node name="5" type="Sprite" parent="p5"]
position = Vector2( -1.54236, -2.28418 )
scale = Vector2( 0.179651, 0.103647 )
texture = ExtResource( 12 )
flip_h = true
flip_v = true

[node name="p5Drop" parent="." instance=ExtResource( 36 )]
position = Vector2( 284.289, 178.344 )
scale = Vector2( 0.45, 0.8 )
dropZoneID = 5

[node name="p6" parent="." instance=ExtResource( 35 )]
position = Vector2( 433.1, 16.5236 )
scale = Vector2( 0.66, 0.66 )
pieceId = 6

[node name="6" type="Sprite" parent="p6"]
position = Vector2( 0.0258789, -0.0437469 )
scale = Vector2( 0.137767, 0.142388 )
texture = ExtResource( 13 )
flip_h = true
flip_v = true

[node name="p6Drop" parent="." instance=ExtResource( 36 )]
position = Vector2( 211.419, 159.73 )
dropZoneID = 6

[node name="p7" parent="." instance=ExtResource( 35 )]
position = Vector2( 320.412, 3.24817 )
scale = Vector2( 0.2, 0.2 )
pieceId = 7

[node name="p7" type="Sprite" parent="p7"]
position = Vector2( -0.273438, 0.19043 )
scale = Vector2( 0.121719, 0.118304 )
texture = ExtResource( 14 )
flip_h = true
flip_v = true

[node name="p7Drop" parent="." instance=ExtResource( 36 )]
position = Vector2( 302.616, 234.246 )
dropZoneID = 7

[node name="p8" parent="." instance=ExtResource( 35 )]
position = Vector2( 187.161, -4.96031 )
scale = Vector2( 0.69, 0.5 )
pieceId = 8

[node name="p8" type="Sprite" parent="p8"]
position = Vector2( -7.95734, 19.7663 )
scale = Vector2( 0.121374, 0.156918 )
texture = ExtResource( 8 )
flip_h = true
flip_v = true

[node name="p8Drop" parent="." instance=ExtResource( 36 )]
position = Vector2( 210.364, 218.622 )
scale = Vector2( 0.69, 0.5 )
dropZoneID = 8

[node name="p9" parent="." instance=ExtResource( 35 )]
position = Vector2( 66.3438, 147.353 )
scale = Vector2( 0.37, 0.43 )
pieceId = 9

[node name="9" type="Sprite" parent="p9"]
position = Vector2( 1.57739, -22.4547 )
scale = Vector2( 0.138019, 0.120207 )
texture = ExtResource( 16 )
flip_h = true
flip_v = true

[node name="p9Drop" parent="." instance=ExtResource( 36 )]
position = Vector2( 244.146, 270.889 )
dropZoneID = 9

[node name="p10" parent="." instance=ExtResource( 35 )]
position = Vector2( -3.5462, 54.6341 )
scale = Vector2( 0.6, 0.75 )
pieceId = 10

[node name="p10" type="Sprite" parent="p10"]
position = Vector2( 0.436523, 0.366577 )
scale = Vector2( 0.139709, 0.112951 )
texture = ExtResource( 17 )
flip_h = true
flip_v = true

[node name="p10Drop" parent="." instance=ExtResource( 36 )]
position = Vector2( 164.541, 277.388 )
dropZoneID = 10

[node name="p11" parent="." instance=ExtResource( 35 )]
position = Vector2( 500.584, 563.741 )
scale = Vector2( 0.7, 0.8 )
pieceId = 11

[node name="p11" type="Sprite" parent="p11"]
position = Vector2( 2.90387, 0.505859 )
scale = Vector2( 0.128927, 0.111756 )
texture = ExtResource( 6 )
flip_h = true
flip_v = true

[node name="p11Drop" parent="." instance=ExtResource( 36 )]
position = Vector2( 406.753, 264.049 )
dropZoneID = 11

[node name="p12" parent="." instance=ExtResource( 35 )]
position = Vector2( 567.872, 299.932 )
scale = Vector2( 0.4, 1 )
pieceId = 12

[node name="p12" type="Sprite" parent="p12"]
position = Vector2( 0.246094, 0.3479 )
scale = Vector2( 0.263309, 0.106992 )
texture = ExtResource( 4 )
flip_h = true
flip_v = true

[node name="p12Drop" parent="." instance=ExtResource( 36 )]
position = Vector2( 452.205, 293.282 )
scale = Vector2( 0.4, 1 )
dropZoneID = 12

[node name="p13" parent="." instance=ExtResource( 35 )]
position = Vector2( -41.172, 536.586 )
scale = Vector2( 0.5, 1 )
pieceId = 13

[node name="p13" type="Sprite" parent="p13"]
position = Vector2( 0.467894, -6.20946 )
scale = Vector2( 0.188864, 0.0980345 )
texture = ExtResource( 18 )
flip_h = true
flip_v = true

[node name="Position2D" parent="." instance=ExtResource( 36 )]
position = Vector2( 384.047, 385.006 )
dropZoneID = 13

[node name="p14" parent="." instance=ExtResource( 35 )]
position = Vector2( 550.828, 430.41 )
scale = Vector2( 0.8, 0.4 )
pieceId = 14

[node name="p14" type="Sprite" parent="p14"]
position = Vector2( -1.94359, 5.40289 )
scale = Vector2( 0.107309, 0.209539 )
texture = ExtResource( 19 )
flip_h = true
flip_v = true

[node name="p14Drop" parent="." instance=ExtResource( 36 )]
position = Vector2( 202.332, 326.301 )
scale = Vector2( 0.8, 0.4 )
dropZoneID = 14

[node name="p15" parent="." instance=ExtResource( 35 )]
position = Vector2( 63.5428, 262.687 )
scale = Vector2( 0.5, 0.7 )
pieceId = 15

[node name="p15" type="Sprite" parent="p15"]
position = Vector2( -3.92731, -17.7817 )
scale = Vector2( 0.180482, 0.124553 )
texture = ExtResource( 1 )
flip_h = true
flip_v = true

[node name="p15Drop" parent="." instance=ExtResource( 36 )]
position = Vector2( 445.551, 397.546 )
dropZoneID = 15

[node name="p16" parent="." instance=ExtResource( 35 )]
position = Vector2( 528.793, 165.627 )
scale = Vector2( 0.5, 0.5 )
pieceId = 16

[node name="p16" type="Sprite" parent="p16"]
position = Vector2( -8.2301, -8.04773 )
scale = Vector2( 0.113733, 0.116182 )
texture = ExtResource( 2 )
flip_h = true
flip_v = true

[node name="p16Drop" parent="." instance=ExtResource( 36 )]
position = Vector2( 311.563, 377.893 )
scale = Vector2( 0.5, 0.5 )
dropZoneID = 16

[node name="p17" parent="." instance=ExtResource( 35 )]
position = Vector2( 82.3462, 488.034 )
scale = Vector2( 0.5, 0.5 )
pieceId = 17

[node name="p17" type="Sprite" parent="p17"]
position = Vector2( -1.18185, -7.5329 )
scale = Vector2( 0.173963, 0.174923 )
texture = ExtResource( 3 )
flip_h = true
flip_v = true

[node name="Position2D2" parent="." instance=ExtResource( 36 )]
position = Vector2( 194.985, 407.142 )
dropZoneID = 17

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 157.605
margin_top = 520.267
margin_right = 476.605
margin_bottom = 549.267
theme = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Phospholipid bilayer complete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 8.34812, -3.65126 )
scale = Vector2( 1.01917, 1.01324 )
color = Color( 0.423529, 0.631373, 0.796078, 1 )
polygon = PoolVector2Array( -524.424, 39.6304, -531.51, 41.8298, -538.21, 47.5224, -543.34, 53.1099, -546.313, 59.0559, -549.286, 66.4884, -549.286, 610.551, -547.8, 619.47, -541.854, 626.902, -535.908, 631.362, -526.989, 635.821, -516.583, 637.308, -492.167, 638.359, -239.067, 637.87, -231.279, 634.443, -220.768, 626.902, -216.308, 617.983, -214.822, 610.551, -213.763, 66.4314, -218.237, 54.661, -224.432, 47.7373, -227.53, 44.6216, -234.146, 39.7313, -378.67, 40.3871 )

[node name="Transporting_my_vaccine" type="Sprite" parent="."]
position = Vector2( -376.275, -24.6204 )
rotation = 6.68588e-10
scale = Vector2( 0.354321, 0.367608 )
texture = ExtResource( 32 )

[node name="Instructions" type="Label" parent="."]
margin_left = -555.0
margin_top = 38.0
margin_right = -207.0
margin_bottom = 648.0
custom_styles/normal = SubResource( 5 )
custom_fonts/font = SubResource( 6 )
autowrap = true
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogCount" type="Label" parent="Instructions"]
margin_left = 160.8
margin_top = 568.277
margin_right = 200.8
margin_bottom = 597.277
custom_fonts/font = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureButton" parent="Instructions"]
margin_left = 9.0
margin_top = 561.0
margin_right = 50.0
margin_bottom = 605.0
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="Right" type="TextureButton" parent="Instructions"]
margin_left = 284.973
margin_top = 562.378
margin_right = 331.973
margin_bottom = 609.378
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 34 )
expand = true

[node name="FadeOut" type="ColorRect" parent="."]
visible = false
margin_left = -626.0
margin_top = -82.0
margin_right = 699.0
margin_bottom = 681.0
color = Color( 0, 0, 0, 0.811765 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SummaryPopUp" type="PopupDialog" parent="." groups=[
"popup",
]]
margin_left = 94.8162
margin_top = 40.8909
margin_right = 532.816
margin_bottom = 591.891
custom_styles/panel = SubResource( 8 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Summary" type="Label" parent="SummaryPopUp"]
margin_left = 76.0
margin_top = 54.0
margin_right = 364.0
margin_bottom = 470.0
theme = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_constants/shadow_as_outline = 0
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="SummaryPopUp"]
margin_left = 177.729
margin_top = 17.8467
margin_right = 254.729
margin_bottom = 46.8467
custom_fonts/font = SubResource( 12 )
text = "Summary"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PageCount" type="Label" parent="SummaryPopUp"]
margin_left = 197.291
margin_top = 489.798
margin_right = 237.291
margin_bottom = 514.798
custom_fonts/font = SubResource( 13 )

[node name="RightSummary" type="TextureButton" parent="SummaryPopUp"]
margin_left = 388.0
margin_top = 244.0
margin_right = 429.0
margin_bottom = 285.0
texture_normal = ExtResource( 27 )
texture_pressed = ExtResource( 34 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftSummary" type="TextureButton" parent="SummaryPopUp"]
margin_left = 8.03149
margin_top = 244.0
margin_right = 48.0315
margin_bottom = 283.0
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 33 )
texture_hover = ExtResource( 33 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cross" type="TextureButton" parent="SummaryPopUp"]
margin_left = 391.976
margin_top = 20.0866
margin_right = 412.976
margin_bottom = 40.0866
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 23 )
texture_hover = ExtResource( 23 )
expand = true

[node name="SummaryButton" type="TextureButton" parent="."]
visible = false
margin_left = 331.657
margin_top = 591.891
margin_right = 488.657
margin_bottom = 663.891
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 21 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="TextureButton" parent="."]
visible = false
margin_left = 485.779
margin_top = 592.992
margin_right = 650.779
margin_bottom = 663.992
texture_normal = ExtResource( 38 )
texture_pressed = ExtResource( 39 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fireworks" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FireworkOne" parent="Fireworks" instance=ExtResource( 37 )]
position = Vector2( -410.193, -242.036 )

[node name="FireworkTwo" parent="Fireworks" instance=ExtResource( 37 )]
position = Vector2( -185.241, 149.96 )

[node name="FireworkThree" parent="Fireworks" instance=ExtResource( 37 )]
position = Vector2( -403.511, 45.2791 )

[node name="FireworkFour" parent="Fireworks" instance=ExtResource( 37 )]
position = Vector2( -162.969, -210.854 )

[node name="FireworkFive" parent="Fireworks" instance=ExtResource( 37 )]
position = Vector2( -33.7884, -21.5384 )

[node name="PuzzleComplete" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )

[node name="ClickAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 40 )

[node name="KeyboardSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[node name="FadeOutLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="FadeOutLayer"]
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeOut = SubResource( 14 )
anims/Initialize = SubResource( 15 )
anims/PlayCurrInstruction = SubResource( 16 )

[node name="RNA_Strand" type="Sprite" parent="."]
position = Vector2( 306.408, 286.978 )
rotation = 0.785398
scale = Vector2( 0.293124, 0.399041 )
texture = ExtResource( 41 )
[connection signal="pressed" from="Instructions/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Instructions/Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="SummaryPopUp/RightSummary" to="." method="_on_RightSummary_pressed"]
[connection signal="pressed" from="SummaryPopUp/LeftSummary" to="." method="_on_LeftSummary_pressed"]
[connection signal="pressed" from="SummaryPopUp/Cross" to="." method="_on_Cross_pressed"]
[connection signal="pressed" from="SummaryButton" to="." method="_on_SummaryButton_pressed"]
[connection signal="button_down" from="ContinueButton" to="." method="_on_ContinueButton_button_down"]
